[package]
name = "rskity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.15.0", features = ["derive"] }
nalgebra = "0.32.5"
wgpu = "0.19.4"

[dev-dependencies]
futures = "0.3.30"
winit = "0.29.15"
