[package]
name = "rskity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.15.0", features = ["derive"] }
nalgebra = "0.32.5"
smallvec = "1.13.2"
wgpu = "0.20.0"

[dev-dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
winit = "0.29.15"
